# SpaceGameEngine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  ProjectCommonProperty.props  README.md  SpaceGameEngine.sln  SpaceGameEngine.sln.licenseheader  appveyor.yml  azure-pipelines.yml  dependencies.txt  push.bat  run_test.ps1  run_test_on_appveyor.ps1  setup.ps1  setup.sh
Benchmark/BenchmarkCommon/: BenchmarkAllocator.hpp  BenchmarkCommon.cpp  BenchmarkCommon.vcxproj  BenchmarkCommon.vcxproj.filters  BenchmarkFunction.hpp  BenchmarkHashMap.hpp  BenchmarkList.hpp  BenchmarkMap.hpp  BenchmarkMemoryManager.hpp  BenchmarkString.hpp  BenchmarkVector.hpp  CMakeLists.txt  main.cpp
Document/Document/: Bootstrap.md  CodeRule.md  DevelopmentPlan.md  DocumentRule.md  PackagedStructure.md  ProjectRule.md  ProjectStruction.md  ProjectStructure.md  WorkFlow.md
Source/Bootstrap/: Bootstrap.vcxproj  Bootstrap.vcxproj.filters  CMakeLists.txt
Source/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters
Source/Common/Private/: DoxygenConfig.hpp  Error.cpp  File.cpp  Future.cpp  GlobalVariable.cpp  Log.cpp  MemoryManager.cpp  SGEString.cpp  String.cpp
Source/Common/Private/Concurrent/: Lock.cpp  Thread.cpp
Source/Common/Private/Memory/: AllocatorBase.cpp  BitmapFixedSizeAllocator.cpp  LockedFixedSizeAllocator.cpp  LockedFixedSizeAllocator.h  MemoryManager.cpp  NativeAllocator.cpp  NewSegregatedFitAllocator.cpp  SegregatedFitAllocator.cpp  StdAllocator.cpp
Source/Common/Private/MetaData/: MetaData.cpp
Source/Common/Private/Module/: CommonModule.cpp  CommonModule.h  Module.cpp  ModuleManager.cpp
Source/Common/Private/StringImplement/: StdTStringImplement.cpp  StdTStringImplement.h
Source/Common/Private/System/: DllLoader.cpp
Source/Common/Private/Time/: Date.cpp  TimeCounter.cpp  UnixTimeImplement.cpp  UnixTimeImplement.h  WindowsTimeImplement.cpp  WindowsTimeImplement.h
Source/Common/Private/Utility/: AutoReleaseBuffer.cpp  DebugInformation.cpp  Endian.cpp
Source/Common/Public/: CommonAPI.h  Error.h  File.h  ForwardDefination.hpp  ForwardDefinition.hpp  Function.hpp  Future.h  GlobalVariable.h  Log.h  MemoryManager.h  Platform.hpp  SGEString.h  SGEString.hpp  SGEStringForward.h  String.h  TypeDefination.hpp  TypeDefinition.hpp  Utility.hpp
Source/Common/Public/Concurrent/: Atomic.hpp  Lock.h  Thread.h
Source/Common/Public/Container/: ContainerConcept.hpp  HashMap.hpp  Iterator.hpp  List.hpp  Map.hpp  PriorityQueue.hpp  Queue.hpp  ReverseIterator.hpp  ReverseSequentialIterator.hpp  Stack.hpp  Vector.hpp
Source/Common/Public/Container/Detail/: HashTable.hpp  RedBlackTree.hpp
Source/Common/Public/Container/Range/: Cast.hpp  FilterTransform.hpp  InfiniteSentinel.hpp  MapTransform.hpp  RangeCore.hpp  ReverseTransform.hpp  Sequence.hpp  TakeTransform.hpp  TransformCore.hpp
Source/Common/Public/Memory/: AllocatorBase.h  Allocators.h  BitmapFixedSizeAllocator.h  LockedFixedSizeAllocator.h  MemoryManager.h  NativeAllocator.h  NewSegregatedFitAllocator.h  SegregatedFitAllocator.h
Source/Common/Public/Memory/Detail/: AllocatorCommon.h  AllocatorUtil.h  SegregatedFitAllocator.h
Source/Common/Public/Meta/: Concept.hpp  Trait.hpp
Source/Common/Public/MetaData/: MetaData.h  MetaObject.hpp
Source/Common/Public/Module/: Module.h  ModuleManager.h
Source/Common/Public/System/: AllowWindowsMacro.h  DllLoader.h  HideWindowsMacro.h
Source/Common/Public/Time/: Date.h  TimeCounter.h
Source/Common/Public/Utility/: AutoReleaseBuffer.h  ControllableObject.hpp  DebugInformation.h  Endian.h  FixedSizeBuffer.hpp  Format.hpp  Hash.hpp  Optional.hpp  Singleton.hpp  Utility.hpp
Source/Common/Public/concurrent/: Lock.h  Thread.h
Source/SpaceLanguage/: CMakeLists.txt  SpaceLanguage.vcxproj  SpaceLanguage.vcxproj.filters
Source/SpaceLanguage/Private/: DoxygenConfig.hpp  Lexer.cpp  Logger.cpp  Logger.h  SpaceLanguageModule.cpp  SpaceLanguageModule.h
Source/SpaceLanguage/Private/IntermediateRepresentation/: BasicBlock.cpp  BasicBlockGraph.cpp  Function.cpp  Operation.cpp  RegisterAllocator.cpp  Translator.cpp  Type.cpp  Variable.cpp
Source/SpaceLanguage/Private/Linker/: CompiledObject.cpp
Source/SpaceLanguage/Private/VirtualMachine/: Assembler.cpp  ExternalCaller.cpp  Instruction.cpp  Register.cpp  VirtualMachine.cpp
Source/SpaceLanguage/Private/VirtualMachine/ExternalCallerModule/: CoreModule.cpp
Source/SpaceLanguage/Public/: Lexer.h  SpaceLanguageAPI.h
Source/SpaceLanguage/Public/IntermediateRepresentation/: BasicBlock.h  BasicBlockGraph.h  Function.h  Operation.h  RegisterAllocator.h  Translator.h  Type.h  Variable.h
Source/SpaceLanguage/Public/Linker/: CompiledObject.h
Source/SpaceLanguage/Public/VirtualMachine/: Assembler.h  ExternalCaller.h  Instruction.h  Register.h  VirtualMachine.h
Source/SpaceLanguage/Public/VirtualMachine/ExternalCallerModule/: CoreModule.h
Test/TestCatch2/: CMakeLists.txt  TestCatch2.vcxproj  main.cpp
Test/TestCommon/: CMakeLists.txt  TestCommon.vcxproj  TestCommon.vcxproj.filters  TestConcurrent.hpp  TestContainer.hpp  TestContainerConcept.hpp  TestDate.hpp  TestDllLoader.hpp  TestError.hpp  TestFile.hpp  TestFormat.hpp  TestFunction.hpp  TestHashMap.hpp  TestHashTable.hpp  TestList.hpp  TestLog.hpp  TestMap.hpp  TestMemoryManager.hpp  TestMeta.hpp  TestMetaData.hpp  TestModule.hpp  TestPriorityQueue.hpp  TestQueue.hpp  TestRange.hpp  TestRedBlackTree.hpp  TestStack.hpp  TestString.hpp  TestTimeCounter.hpp  TestUtility.hpp  TestVector.hpp  main.cpp
Test/TestModule/: CMakeLists.txt  TestModule.cpp  TestModule.h  TestModule.vcxproj  TestModule.vcxproj.filters
Test/TestSpaceLanguage/: CMakeLists.txt  TestAssembler.hpp  TestCoreModule.hpp  TestIntermediateRepresentation.hpp  TestLexer.hpp  TestLinker.hpp  TestSpaceLanguage.vcxproj  TestSpaceLanguage.vcxproj.filters  TestVirtualMachine.hpp  (+1 more)
azure-pipelines/: cmake-template.yml  macos.yml  run-benchmarks.ps1  run-benchmarks.sh  run-tests.ps1  run-tests.sh  setup-gcc11.sh  setup-gcc9.sh  ubuntu.yml  windows-template.yml  windows-vs2017.yml  windows-vs2019.yml  windows.yml
(+24 files in other folders)
